Ensure there is always specified spacing between separator and the content it applies to #3325

--- a/src/read-side/html-pages/_standard-separator.scss
+++ b/src/read-side/html-pages/_standard-separator.scss
@@ -1,8 +1,10 @@
 @use 'settings';
 
-@mixin top {
+@mixin top($distance) {
   border-top: settings.$border-width solid settings.$colour-furniture;
+  padding-top: $distance;
 }
-@mixin bottom {
+@mixin bottom($distance) {
   border-bottom: settings.$border-width solid settings.$colour-furniture;
+  padding-bottom: $distance;
 }
