--- a/src/read-side/html-pages/paper-activity-page/render-as-html/_header.scss
+++ b/src/read-side/html-pages/paper-activity-page/render-as-html/_header.scss
@@ -77,8 +77,7 @@
 }
 
 .curation-statement {
-  @include standard-separator.top();
-  padding-top: 3rem;
+  @include standard-separator.top(3rem);
   margin-bottom: 3rem;
 
   &:last-child {
